# multi_robot_sim

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  config.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base.yaml  slam_gmapping.xml
launch/: bot.xml  map.launch  multi_robot.launch  single_robot.launch
maps/: map.drawio
rviz/: multirobot.rviz  robot.rviz  singlerobot.rviz
src/: mission_client.cpp  mission_queue.cpp
srv/: stateHandler.srv  waypointsArray.srv
worksheet/: .txt  robot_0.txt  robot_1.txt  robot_2.txt  robot_3.txt  robot_4.txt  robot_5.txt
world/: block.world  bot.world  map.world  map.xml  world.world
worlds/: multi_robot_warehouse.world  single_robot_warehouse copy.world  single_robot_warehouse.world
