<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_sim</name>
  <version>0.0.1</version>
  <description>The multi_robot_sim package</description>
  <maintainer email="kalhapure.swapnil@gmail.com">cybrfrk</maintainer>
  <license>MIT</license>
  
  <author email="kalhapure.swapnil@gmail.com">Swapnil Kalhapure</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
